@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-13T00:33:01Z",
+  "timestamp" : "2022-09-13T08:09:35Z",
   "count_outdated" : 62,
   "uniques_outdated" : 51,
-  "count" : 77,
-  "uniques" : 64,
+  "count" : 78,
+  "uniques" : 65,
   "clones" : [
     {
       "timestamp": "2022-08-30T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
