@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 9,
   "clones": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
