@@ -1,3 +1,11 @@
+2022-09-13T08:09:35Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043387171
+* notice: last 14d: unq all: 9 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 64 77
+* notice: next accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-13]
+
 2022-09-13T00:33:01Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041538652
 * notice: last 14d: unq all: 9 15
